Add debugging logs and safe startup logic

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>movers-game-v2</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <div style="color: white; font-family: sans-serif; text-align: center; margin-top: 20%;">
+        <h1>Loading Game...</h1>
+        <p>If this message stays, something went wrong.</p>
+      </div>
+    </div>
     <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
